# OpenMill

./: CONTRIBUTING.md  Cargo.toml  GUIDE.md  LICENSE-APACHE  LICENSE-MIT  README.md  launch.bat
.claude/: settings.local.json
.github/PULL_REQUEST_TEMPLATE/: template.md
openmill-core/: Cargo.toml
openmill-core/src/: feature.rs  fixture.rs  job.rs  lib.rs  machine.rs  material.rs  model.rs  sdf.rs  tool.rs  verify.rs
openmill-core/src/import/: mod.rs  stl.rs  threemf.rs
openmill-core/src/kinematics/: default_machines.rs  mod.rs  table_table.rs  traits.rs  types.rs
openmill-core/src/strategies/: adaptive_clearing.rs  contour_parallel.rs  drilling.rs  four_plus_one.rs  geodesic.rs  mod.rs  multi_axis_roughing.rs  pencil.rs  pocket_clearing.rs  surface_normal_5axis.rs  swarf_5axis.rs  tapping.rs  thread_milling.rs  three_plus_two.rs  traits.rs  transforms.rs
openmill-core/src/toolpath/: leads.rs  mod.rs  types.rs
openmill-post/: Cargo.toml
openmill-post/src/: fanuc.rs  feed_rate.rs  grbl.rs  lib.rs  linuxcnc.rs  traits.rs
openmill-sim/: Cargo.toml
openmill-sim/src/: collision.rs  lib.rs
openmill-ui/: Cargo.toml
openmill-ui/src/: app.rs  autosave.rs  bundle.rs  generate.rs  history.rs  main.rs  marching_cubes.rs  setup_sheet.rs  viewport.rs  voxel.rs
openmill-ui/src/app/: file_actions.rs  menu.rs  mod.rs  panels.rs  sidebar.rs  strategy_params.rs  tabs.rs
tools/: tool_3.json  tool_4.json
