[package]
name = "openmill-core"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
parry3d = "0.17"
stl_io = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
log = "0.4"
rayon = "1"
zip = "2"
quick-xml = "0.36"

[dev-dependencies]
approx = "0.5"
