[package]
name = "openmill-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openmill"
path = "src/main.rs"

[dependencies]
openmill-core = { path = "../openmill-core" }
openmill-sim = { path = "../openmill-sim" }
openmill-post = { path = "../openmill-post" }
eframe = { version = "0.29", features = ["wgpu"] }
egui = "0.29"
log = "0.4"
env_logger = "0.11"
rfd = "0.15"
serde_json = "1.0.149"
bytemuck = { version = "1.25.0", features = ["derive"] }
parry3d = "0.17"
nalgebra = "0.33"
